# CrossCompileTest

./: .gitignore  COPYING  COPYING.md  README.md  autogen.sh  configure.ac
scripts/: configure_windows.sh
src/: Makefile.am  generated.h  main.c
src/generator/: Makefile.am  generator.c
